# liboqs

./: CMakeLists.txt  log.txt  mybil.sh
.CMake/: alg_support.cmake
docs/: FUZZING.md
src/: CMakeLists.txt  oqsconfig.h.cmake
src/kem/: kem.c  kem.h
src/kem/[backup]ntruplus/: CMakeLists.txt  kem_ntruplus.h  kem_ntruplus_1152.c  kem_ntruplus_768.c
src/kem/[backup]ntruplus/ntruplus1152/: config.h  ntt.h  poly.h  reduce.h
src/kem/[backup]ntruplus/ntruplus576/: api.h  kem.c
src/kem/[backup]ntruplus/ntruplus576/integration/liboqs/: config_c.h
src/kem/[backup]ntruplus/ntruplus576_avx2/: config.h
src/kem/[backup]ntruplus/ntruplus768/: api.h  kem.c  verify.h
src/kem/[backup]ntruplus/ntruplus864/: ntt.h
src/kem/[backup]smaugt/: CMakeLists.txt  [Backup]CMakeLists.txt  kem_smaugt_128.c  kem_smaugt_256.c
src/kem/[backup]smaugt/cryptolab_smaug1_avx2/: cmake
src/kem/[backup]smaugt/cryptolab_smaug1_avx2/benchmark/: PQC_bench.c  speed.c
src/kem/[backup]smaugt/cryptolab_smaug1_avx2/kat/: PQCgenKAT_kem.c  kat_api.h  kat_encrypt.c
src/kem/[backup]smaugt/cryptolab_smaug3_avx2/include/: api.h
src/kem/[backup]smaugt/cryptolab_smaug5_avx2/test/: main.c
src/kem/[backup]smaugt/smaugt_avx2/benchmark/: speed_print.h
src/kem/[backup]smaugt/smaugt_avx2/kat/: kat_kem.c
src/kem/[backup]smaugt/smaugt_avx2/test/: UnitTest.cpp
src/kem/[backup]smaugt/smaugt_ref/include/: parameters.h
src/kem/[backup]smaugt/smaugt_ref/src/: randombytes.c
src/kem/ntruplus/: CMakeLists.txt  kem_ntruplus_576.c  kem_ntruplus_864.c  ntruplus_common.c
src/kem/ntruplus/ntruplus1152/: api.h
src/kem/ntruplus/ntruplus1152_avx2/: config.h
src/kem/ntruplus/ntruplus576/: config.h  cpucycles.h  ntt.h  poly.c  verify.h
src/kem/ntruplus/ntruplus576_avx2/: kem.h
src/kem/ntruplus/ntruplus768/: aes256ctr.h  config.h
src/kem/ntruplus/ntruplus768_avx2/: config.h
src/kem/ntruplus/ntruplus864/: Makefile  api.h  config.h  kem.c  kem.h  mykeys.txt  poly.c  symmetric.h  test.c
src/kem/ntruplus/ntruplus864_avx2/: config.h
src/kem/paloma/: CMakeLists.txt  kem_paloma.h  kem_paloma_128.c  kem_paloma_192.c  kem_paloma_256.c  makefile
src/kem/paloma/paloma_128/: paloma_config.h
src/kem/paloma/paloma_192/: paloma_config.h
src/kem/paloma/paloma_256/: paloma_config.h
src/kem/paloma/paloma_common/: decap.c  decap.h  decoding.c  decoding.h  decrypt.c  decrypt.h  encap.c  encap.h  encrypt.c  encrypt.h  genkeypair.c  genkeypair.h  gf2m.c  gf2m.h  gf2m_poly.c  gf2m_poly.h  gf2m_tab.c  gf2m_tab.h  gf2m_tab_gen.c  gf2m_tab_gen.h  lsh.c  lsh.h  lsh512.h  mat_mul.c  mat_mul.h  paloma_api.c  paloma_api.h  paloma_constant.h  paloma_data.h  paloma_def.h  paloma_local.h  paloma_param.h  paloma_string.h  utility.c  utility.h
src/kem/smaugt/: CMakeLists.txt  kem_smaugt.h  kem_smaugt_192.c
src/kem/smaugt/smaugt_avx2/benchmark/: cpucycles.c  cpucycles.h  speed_print.c
src/kem/smaugt/smaugt_avx2/include/: parameters.h
src/kem/smaugt/smaugt_avx2/smaugt_avx2_common/keccak/: KeccakP-1600-times4-SIMD256.c
src/kem/smaugt/smaugt_avx2/src/: kem.c  smaugt_avx2_common.c
src/kem/smaugt/smaugt_ref/include/: api.h  poly.h  randombytes.h
src/kem/smaugt/smaugt_ref/src/: kem.c  smaugt_common.c
src/sig/: sig.c  sig.h
src/sig/haetae/: CMakeLists.txt  haetae128.c  haetae192.c  haetae256.c  sig_haetae.h
src/sig/haetae/haetae_avx2/: README.md
src/sig/haetae/haetae_avx2/benchmark/: CMakeLists.txt  cpucycles.c  cpucycles.h  speed.c  speed_print.c  speed_print.h
src/sig/haetae/haetae_avx2/cmake/: CPM.cmake
src/sig/haetae/haetae_avx2/include/: config.h  decompose.h  encoding.h  fips202.h  packing.h  params.h  polymat.h  polyvec.h  randombytes.h  rans_byte.h  reduce.h  sign.h  symmetric.h
src/sig/haetae/haetae_avx2/kat/: CMakeLists.txt  PQCgenKAT_sign.c  api.h  kat_sign.c
src/sig/haetae/haetae_avx2/src/: decompose.c  encoding.c  fips202.c  packing.c  poly.c  randombytes.c  reduce.c  sampler.c  samplerx4.c  sign.c  symmetric-shake.c
src/sig/haetae/haetae_avx2/test/: CMakeLists.txt  main.c
src/sig/haetae/haetae_ref/benchmark/: speed.c
src/sig/haetae/haetae_ref/include/: config.h
src/sig/haetae/haetae_ref/kat/: CMakeLists.txt
src/sig/haetae/haetae_ref/src/: fixpoint.c  poly.c  polyfix.c  sampler.c
src/sig/haetae/haetae_ref/test/: main.c
